# chat-with-pdf-genai-exercise

./: .dockerignore  .env  .env.example  .gitignore  .gitingore  AGENT_ORCHESTRATION.md  Dockerfile  Dockerfile.ingest  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: main.py
app/agents/: __init__.py  base.py  orchestrator.py  pdf_query_agent.py  response_agent.py  web_search_agent.py
app/api/endpoints/: chat.py  ingestion.py
app/api/models/: chat.py
app/config/: __init__.py  config.py  cors.py  llm.py
app/core/: __init__.py  vector_store.py
app/crud/: __init__.py  crud_ingestion.py
app/db/: base.py
app/models/: chat.py  ingestion.py  intent.py
app/schemas/: __init__.py  ingestion.py
app/services/: langchain_router.py  llm_router.py  vector_store.py  web_search.py
app/services/conversation/: graph.py  state.py
app/utils/: ingestion_tracker.py
docker/mysql/init/: 01-init.sql
docs/: AGENT_ORCHESTRATION.md  ARCHITECTURE_OVERVIEW.md  DATA_INGESTION.md  INTENT_CLARIFICATION.md  LLM_ROUTER.md  LLM_ROUTER_DESIGN.md  LLM_ROUTER_IMPLEMENTATION.md  PDF_INGESTION.md  PDF_QUERY_AGENT.md  PROJECT_REQUIREMENTS.md  RESPONSE_AGENT.md  WEB_SEARCH_AGENT.md  limitations_and_improvements.md
scripts/: README.md  ingest_pdfs.py  pdf_processor.py
